metrics/fortio-istio-tests/istio-default/init-istio-config/policy-authZ-by-label.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-read
  namespace: fortio-istio-default
spec:
  selector:
    matchLabels:
      app: fortio-client
  action: ALLOW
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: allow-read
#   namespace: fortio-istio-default
# spec:
#   action: ALLOW
#   rules:
#   - from:
#     - source:
#         namespaces: ["fortio-istio-default"]
    # to:
    # - operation:
    #     methods: ["GET"]
    #     paths: ["/echo"]
    # - operation:
    #     methods: ["POST"]
    #     paths: ["/"]
    # when:
    # - key: request.auth.claims[iss]
    #   values: ["https://accounts.google.com"]
